# openvfs

./: CMakeLists.txt  INTEGRATION.md  README.md  fod.drawio  openvfs_overview.drawio
.github/workflows/: main.yml
openVfsFuse/src/: openvfsattributes.cpp  openvfsfuse.cpp
src/: CMakeLists.txt  OpenVFSConfig.cmake.in  config.json  openvfsattributes.h  openvfsfuse.cpp  openvfsfuse.h  strtools.cpp  strtools.h  xattr.cpp  xattr.h
src/openvfs/: CMakeLists.txt  openvfconstants.h  openvfs.cpp  openvfs.h  openvfsattributes.cpp  openvfsattributes.h  xattr.cpp  xattr.h
src/openvfsfuse/: CMakeLists.txt  main.cpp  openvfsfuse.cpp  openvfsfuse.h  socketthread.cpp  socketthread.h
src/vfsstat/: main.cpp
